--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foremade Home Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -316,6 +317,44 @@
         </a>
     </div>
         </section>
+        <section class="home_tabs">
+        <div class="container-tabs">
+            <h2>Recommended For You</h2>
+            <div class="tabs-navigation">
+                <button class="tab-button active" data-tab="featured">Featured Products</button>
+                <button class="tab-button" data-tab="bestselling">Best Selling</button>
+                <button class="tab-button" data-tab="latest">Latest Products</button>
+                <a href="#" class="view-all">View All</a>
+            </div>
+
+            <div class="tabs-content">
+                <div id="featured" class="tab-pane active">
+                    <div class="products-carousel-wrapper">
+                        <div class="products-grid">
+                            </div>
+                    </div>
+                </div>
+                <div id="bestselling" class="tab-pane">
+                    <div class="products-carousel-wrapper">
+                        <div class="products-grid">
+                            </div>
+                    </div>
+                </div>
+                <div id="latest" class="tab-pane">
+                    <div class="products-carousel-wrapper">
+                        <div class="products-grid">
+                            </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="pagination-arrows tabs_arrow">
+                <button class="arrow left-arrow"><i class="fas fa-chevron-left"></i></button>
+                <button class="arrow right-arrow"><i class="fas fa-chevron-right"></i></button>
+            </div>
+
+        </div>
+    </section>
                 <section class="home_video_hero">
             <div class="video-background">
                <video autoplay loop muted playsinline poster="https://xcdn.next.co.uk/COMMON/Items/Default/Default/Videos/MO_GILLIGAN_7x3_2_9.mp4">
@@ -554,6 +593,7 @@
         </div>
     </div>
 </section>
+
 <section class="subscription-section">
     <div class="subscription-icon">
         <img src="https://www.next.co.uk/Images/Next/gel-newsletter-icon.svg" alt="Email Icon"> 
@@ -825,6 +865,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
         
     </script>
+    <script src="script.js"></script>
 
 </body>
 </html>
