--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foremade Home Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -740,8 +740,8 @@
 
     </div>
 
-    <script src="script.js"></script>
-    <script src="product_tabs.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/product_tabs.js"></script>
 
 </body>
 </html>
