--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -27,7 +27,7 @@
                     <a class="icon" aria-label="Account" title="Account" href="signup.html">
                         <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M20 21a8 8 0 10-16 0"></path><circle cx="12" cy="7" r="4"></circle></svg>
                     </a>
-                    <a class="icon" aria-label="Favourites" title="Favourites" href="#">
+                    <a class="icon" aria-label="Favourites" title="Favourites" href="dashboard.html">
                         <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M12 21s-7-4.35-7-10a4 4 0 018-1 4 4 0 018 1c0 5.65-7 10-7 10z"></path></svg>
                     </a>
                     <a class="icon" aria-label="Bag" title="Bag" href="#">
