--- a/ecommerce/signup.html
+++ b/ecommerce/signup.html
@@ -134,7 +134,9 @@
                 </div>
             </div>
             
-            
+            <!-- popup  -->
+
+
             <!-- <div id="signup-modal" class="signup-modal-backdrop">
                 <div class="signup-modal-content">
                     <div class="signup-modal-header">
