--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -148,7 +148,7 @@
     <div class="mobile-top-bar">
         <div class="mobile-utility-buttons">
             <a href="#" class="mobile-util-btn">Shop</a>
-            <a href="sell software.html" class="mobile-util-btn">Sell</a>
+            <a href="dashboard.html" class="mobile-util-btn">Sell</a>
             <a href="#" class="mobile-util-btn">Smile</a>
         </div>
         <a href="signup.html" class="mobile-profile-btn">My Profile</a>
