--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -84,7 +84,7 @@
         </div>
     </div>
 </div>
-<header class="utilbar">
+<!-- <header class="utilbar">
     <div class="container row">
         <button class="hamburger" id="openDrawer" aria-label="Open Menu" title="Open Menu">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6"><path d="M3 6h18M3 12h18M3 18h18"></path></svg>
@@ -108,7 +108,39 @@
             </a>
         </div>
     </div>
+    
+</header> -->
+
+<header class="utilbar">
+    <div class="container row">
+        <button class="hamburger" id="openDrawer" aria-label="Open Menu" title="Open Menu">
+            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6"><path d="M3 6h18M3 12h18M3 18h18"></path></svg>
+        </button>
+        <div class="brand">
+            <img src="https://foremade.com/assets/foremade-Bxu0VQA7.png" alt="Foremade Logo">
+        </div>
+        <div class="iconbar">
+              <a class="icon" aria-label="Account" title="Account" href="signup.html">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M20 21a8 8 0 10-16 0"></path><circle cx="12" cy="7" r="4"></circle></svg>
+            </a>
+            <a class="icon" aria-label="Favourites" title="Favourites" href="#">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M12 21s-7-4.35-7-10a4 4 0 018-1 4 4 0 018 1c0 5.65-7 10-7 10z"></path></svg>
+            </a>
+            <a class="icon" aria-label="Bag" title="Bag" href="#">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M6 7h12l-1 13H7L6 7z"></path><path d="M9 7a3 3 0 016 0"></path></svg>
+            </a>
+            </div> 
+    </div>
 </header>
+
+<div class="search-bar-desktop-wrapper">
+    <div class="containerrs">
+        <div class="search">
+            <input aria-label="Search" placeholder="Search for anything here…">
+            <svg width="18" height="18" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M21.53 20.47l-4.6-4.6a8 8 0 10-1.06 1.06l4.6 4.6a.75.75 0 101.06-1.06zM10.5 18a7.5 7.5 0 110-15 7.5 7.5 0 010 15z"></path></svg>
+        </div>
+    </div>
+</div>
 
         <div class="home_navbar">
             <div class="nav-bar-wrapper">
@@ -853,8 +885,8 @@
                         </svg>
                     </span>
                     <div class="quick-link-text">
-                        <strong>Add Tracking</strong>
-                        <span>Track your order status</span>
+                        <strong>Track your order </strong>
+                        <!-- <span>Track your order status</span> -->
                     </div>
                 </a>
             </div>
