--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -467,7 +467,7 @@
         </a>
     </div>
         </section>
-        <section class="home_tabs">
+        <!-- <section class="home_tabs">
         <div class="container-tabs">
             <h2>Recommended For You</h2>
             <div class="tabs-navigation">
@@ -504,7 +504,41 @@
             </div>
 
         </div>
+    </section> -->
+      <section class="product-section">
+        <div class="section-header">
+            <h2>Featured Products</h2>
+            <a href="#" class="see-all">See All <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="products-scroll-wrapper">
+            <div class="products-grid" id="featured-products"></div>
+        </div>
     </section>
+
+    <!-- Best Selling Section -->
+    <section class="product-section">
+        <div class="section-header">
+            <h2>Best Selling</h2>
+            <a href="#" class="see-all">See All <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="products-scroll-wrapper">
+            <div class="products-grid" id="bestselling-products"></div>
+        </div>
+    </section>
+
+    <!-- Latest Products Section -->
+    <section class="product-section">
+        <div class="section-header">
+            <h2>Latest Products</h2>
+            <a href="#" class="see-all">See All <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="products-scroll-wrapper">
+            <div class="products-grid" id="latest-products"></div>
+        </div>
+    </section>
+
+
+
                 <section class="home_video_hero">
             <div class="video-background">
                <video autoplay loop muted playsinline poster="https://xcdn.next.co.uk/COMMON/Items/Default/Default/Videos/MO_GILLIGAN_7x3_2_9.mp4">
