--- a/ecommerce/dashboard.html
+++ b/ecommerce/dashboard.html
@@ -20,7 +20,7 @@
         }
 
         .software_container {
-            display: block;
+            display: flex;
             min-height: 100vh;
             position: relative;
         }
