--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -38,8 +38,11 @@
     <header class="main-header">
         <div class="header-container">
             <div class="logo">
-                <img src="https://foremade.com/assets/foremade-Bxu0VQA7.png" alt="Foremade">
+                <a href="index.html">
+                    <img src="https://foremade.com/assets/foremade-Bxu0VQA7.png" alt="Foremade">
+                </a>
             </div>
+
 
             <!-- <div class="search-container">
                 <input type="text" class="search-box" placeholder="Search for anything here...">
@@ -139,7 +142,9 @@
     <div class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-header">
             <div class="mobile-logo">
-                <img src="https://foremade.com/assets/foremade-Bxu0VQA7.png" alt="Foremade">
+                <a href="index.html">
+                    <img src="https://foremade.com/assets/foremade-Bxu0VQA7.png" alt="Foremade">
+                </a>
             </div>
             <button class="close-btn" id="closeMenu">×</button>
         </div>
