--- a/ecommerce/profile.html
+++ b/ecommerce/profile.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="header-icons">
-                <a href="signup.html"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M20 21a8 8 0 10-16 0"></path><circle cx="12" cy="7" r="4"></circle></svg></a>
+                <a href="s.html"><svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M20 21a8 8 0 10-16 0"></path><circle cx="12" cy="7" r="4"></circle></svg></a>
                 <a href="#"> <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M12 21s-7-4.35-7-10a4 4 0 018-1 4 4 0 018 1c0 5.65-7 10-7 10z"></path></svg></a>
                 <a href="#"> <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M6 7h12l-1 13H7L6 7z"></path><path d="M9 7a3 3 0 016 0"></path></svg>
             </a>
@@ -154,7 +154,7 @@
         </div>
 
         <div class="auth-buttons">
-            <a href="signup.html">Log in  |  Sign up</a>
+            <a href="s.html">Log in  |  Sign up</a>
         </div>
 
         <ul class="mobile-nav-links">
