--- a/ecommerce/dashboard.html
+++ b/ecommerce/dashboard.html
@@ -1414,6 +1414,7 @@ body {
 
     .software_upload-title {
         margin-bottom: 15px;
+        font-size: 22px;
     }
 
     /* Stack inputs on small screens */
@@ -1709,7 +1710,7 @@ body {
                                 <i class='bx bx-package'></i>
                                 Add a New Product
                             </h2>
-                            <a href="#" class="software_bulk-upload-btn">Bulk Upload</a>
+                            <a href="#" data-page="bump" class="software_bulk-upload-btn">Bulk Upload</a>
                         </div>
 
                         <form>
