--- a/ecommerce/dashboard.html
+++ b/ecommerce/dashboard.html
@@ -1438,7 +1438,7 @@ body {
             <span></span>
         </div>
         <div class="software_mobile-logo">
-            <img src="https://foremade.com/assets/logi-DGW4y32z.png" alt="Foremade">
+            <a href="index.html"><img src="https://foremade.com/assets/logi-DGW4y32z.png" alt="Foremade Logo"></a>
         </div>
     </div>
 
