--- a/ecommerce/dashboard.html
+++ b/ecommerce/dashboard.html
@@ -1460,7 +1460,7 @@ body {
 
             <div class="software_menu-item software_active" data-page="dashboard">
                 <i class='bx bx-home'></i>
-                Dashboard
+                Dashboars
             </div>
 
             <div class="software_menu-section">
