--- a/ecommerce/product.html
+++ b/ecommerce/product.html
@@ -373,12 +373,12 @@
                                     <span class="product_rating_text">4.4</span>
                                 </div>
                                 <span class="product_status_badge meta_badge">✓ New</span>
-                                <span class="product_seller_box meta_badge">Seller: <span>dickkal399295</span></span>
+                                <span class="product_seller_box meta_badge">sellerName: <span>dickkal399295</span></span>
                             </div>
 
                             <button class="product_message_btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-message-circle message-icon" aria-hidden="true"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"></path></svg>
-                                <span>Message Seller</span>
+                                <span>Ask question about this item</span>
                             </button>
                             
                             <div class="product_quantity_stock_row">
