--- a/ecommerce/dashboard.html
+++ b/ecommerce/dashboard.html
@@ -1788,7 +1788,7 @@ body {
                             <div class="software_form-section">
                                 <h3 class="software_section-header">
                                     <i class='bx bx-info-circle'></i>
-                                    Product Detail
+                                    Product Details
                                 </h3>
                                 
                                 <div class="software_input-row">
