--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -321,13 +321,24 @@
     </ul> -->
 </div>
 
-        <section class="home_hero">
+        <!-- <section class="home_hero">
             <div class="home_hero_content">
-                <!-- <p class="hero_from_text">FROM</p>
+                <p class="hero_from_text">FROM</p>
                 <h1 class="hero_heading">CONSOLES TO GAMES</h1>
-                <p class="hero_subheading">Play starts here.</p> -->
+                <p class="hero_subheading">Play starts here.</p>
             </div>
-        </section>
+        </section> -->
+        <section class="home_hero">
+  <video autoplay muted loop playsinline class="home_hero-video">
+    <source src="https://res.cloudinary.com/druendnph/video/upload/v1762789398/products/opytuw97afoeugfichqm.mp4" type="video/mp4">
+  </video>
+
+  <!-- <div class="home_hero-content">
+    <h1>Welcome to Our Website</h1>
+    <p>Your text or CTA goes here</p>
+  </div> -->
+</section>
+
 
         <section class="category_section">
     <div class="container">
