--- a/ecommerce/profile.html
+++ b/ecommerce/profile.html
@@ -413,7 +413,7 @@
                 <li class="profile_menu-item">
                     <a href="dashboard.html" class="profile_menu-link">
                         <i class="fas fa-th-large profile_menu-icon"></i>
-                        <span>My Dashboardd</span>
+                        <span>My Dashboard</span>
                     </a>
                 </li>
             </ul>
