--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -1060,7 +1060,7 @@
         </div>
         
         <div class="policy-links-bar">
-            <a href="#">User Agreement</a> |
+            <a href="#">User Agreemen</a> |
             <a href="#">Privacy Policy</a> |
             <a href="#">Terms & Conditions</a> |
             <a href="#">Refund Policy</a> 
